# src/controllers/book.controller.ts
@@ -1,77 +1,63 @@
-import {Body, Controller, Delete, Get, Patch, Path, Post, Route, Tags} from "tsoa";
-import {BookDTO} from "../dto/book.dto";
-import {bookService} from "../services/book.service";
-import {CustomError} from "../middlewares/errorHandler";
-import {Book} from "../models/book.model";
-import {BookCopyDTO} from "../dto/bookCopy.dto";
-import {bookCopyService} from "../services/bookCopy.service";
+import { Body, Controller, Get, Post, Patch, Route, Tags, Path, Delete, Security } from "tsoa";
+import { BookDTO } from "../dto/book.dto";
+import { bookService } from "../services/book.service";
+import { CustomError } from "../middlewares/errorHandler";
+import { Book } from "../models/book.model";
+import { toDto } from "../mapper/book.mapper";
 
 @Route("books")
 @Tags("Books")
 export class BookController extends Controller {
-    @Get("/")
-    public async getAllBooks(): Promise<BookDTO[]> {
-        return bookService.getAllBooks();
+  @Get("/")
+  @Security("jwt", ["book:read"])
+  public async getAllBooks(): Promise<BookDTO[]> {
+    return bookService.getAllBooks();
     }
 
-    // Récupère un livre par ID
-    @Get("/{id}")
-    public async getBookById(@Path() id: number): Promise<BookDTO | null> {
-        const book: Book | null = await bookService.getBookById(id);
-        if (!book) {
-            let error: CustomError = new Error("Book not found");
-            error.status = 404;
-            throw error;
-        }
-        return book;
+  @Get("{id}")
+  @Security("jwt", ["book:read"])
+  public async getBoodById(id: number): Promise<BookDTO> {
+    let book: Book | null = await bookService.getBookById(id); 
+
+    if(book === null) {
+      let error: CustomError = new Error(`Book ${id} not found`);
+      error.status = 404;
+      throw error;
     }
 
-    // Crée un nouveau livre
-    @Post("/")
-    public async createBook(
-        @Body() requestBody: BookDTO
-    ): Promise<BookDTO> {
-        const {
-            title,
-            publishYear,
-            author,
-            isbn
-        } = requestBody;
-        return bookService.createBook(title, publishYear, author, isbn);
+    return toDto(book);
+  }
+
+  @Post("/")
+  @Security("jwt", ["book:create"])
+  public async createBook(@Body() requestBody: BookDTO): Promise<BookDTO> {
+    let { title, publishYear, author, isbn } = requestBody;
+    
+    if(author?.id === undefined) {
+      let error: CustomError = new Error("Author ID is required to create a book");
+      error.status = 400;
+      throw error;
+    }
+    return bookService.createBook(title, publishYear, author?.id, isbn)
+  }
+
+  @Patch("{id}")
+  @Security("jwt", ["book:update"])
+  public async updateBook(@Path() id: number, @Body() requestBody: BookDTO): Promise<BookDTO> {
+    let { title, publishYear, author, isbn } = requestBody;
+
+    if(author?.id === undefined) {
+      let error: CustomError = new Error("Author ID is required to update a book");
+      error.status = 400;
+      throw error;
     }
 
-    // Met à jour un livre par ID
-    @Patch("{id}")
-    public async updateBook(
-        @Path() id: number,
-        @Body() requestBody: BookDTO
-    ): Promise<BookDTO | null> {
-        const {title, publishYear, author, isbn} = requestBody;
-        const book: Book | null = await bookService.updateBook(id, title, publishYear, author, isbn);
-        if (!book) {
-            let error: CustomError = new Error("Book not found");
-            error.status = 404;
-            throw error;
-        }
-        return book;
-    }
+    return bookService.updateBook(id, title, publishYear, author?.id, isbn);
+  }
 
-    // Supprime un livre par ID
-    @Delete("{id}")
-    public async deleteBook(@Path() id: number): Promise<void> {
-        await bookService.deleteBook(id);
-    }
-
-    // Récupère les copies d'un livre par ID
-    @Get("/{id}/bookCopys")
-    public async getBookBookCopysById(@Path() id: number): Promise<BookCopyDTO[] | null> {
-        const book: Book | null = await bookService.getBookById(id);
-        if (!book) {
-            let error: CustomError = new Error("Book not found");
-            error.status = 404;
-            throw error;
-        }
-
-        return bookCopyService.getBookCopysByBookId(id);
-    }
+  @Delete("{id}")
+  @Security("jwt", ["book:delete"])
+  public async deleteBook(@Path() id: number): Promise<void> {
+    await bookService.deleteBook(id);
+  }
 }
