# src/controllers/bookCopy.controller.ts
@@ -1,61 +1,63 @@
-import {Body, Controller, Delete, Get, Patch, Path, Post, Route, Tags} from "tsoa";
-import {BookCopyDTO} from "../dto/bookCopy.dto";
-import {bookCopyService} from "../services/bookCopy.service";
-import {CustomError} from "../middlewares/errorHandler";
-import {BookCopy} from "../models/bookCopy.model";
+import { Body, Controller, Get, Post, Patch, Route, Tags, Path, Delete, Security } from "tsoa";
+import { CustomError } from "../middlewares/errorHandler";
+import { BookCopyDTO } from "../dto/bookCopy.dto";
+import { bookCopyService } from "../services/bookCopy.service";
+import { BookCopy } from "../models/bookCopy.model";
 
 @Route("book-copies")
-@Tags("Book-copies")
+@Tags("BookCopys")
 export class BookCopyController extends Controller {
-    @Get("/")
-    public async getAllBookCopys(): Promise<BookCopyDTO[]> {
-        return bookCopyService.getAllBookCopys();
+  @Get("/")
+  @Security("jwt", ["bookCopy:read"])
+  public async getAllBookCopies(): Promise<BookCopyDTO[]> {
+    return bookCopyService.getAllBookCopies();
+  }
+
+  @Get("{id}")
+  @Security("jwt", ["bookCopy:read"])
+  public async getBookCopyById(id: number): Promise<BookCopyDTO> {
+    let bookCopy: BookCopy | null = await bookCopyService.getBookCopyById(id);
+
+    if (bookCopy === null) {
+      let error: CustomError = new Error(`Book Copy ${id} not found`);
+      error.status = 404;
+      throw error;
     }
 
-    // Récupère une copie de livre par ID
-    @Get("/{id}")
-    public async getBookCopyById(@Path() id: number): Promise<BookCopyDTO | null> {
-        const bookCopy: BookCopy | null = await bookCopyService.getBookCopyById(id);
-        if (!bookCopy) {
-            let error: CustomError = new Error("BookCopy not found");
-            error.status = 404;
-            throw error;
-        }
-        return bookCopy;
-    }
+    return bookCopy;
+  }
 
-    // Crée une nouvelle copie de livre
-    @Post("/")
-    public async createBookCopy(
-        @Body() requestBody: BookCopyDTO
-    ): Promise<BookCopyDTO> {
-        const {
-            available,
-            state,
-            book
-        } = requestBody;
-        return bookCopyService.createBookCopy(available, state, book);
-    }
+  @Post("/")
+  @Security("jwt", ["bookCopy:create"])
+  public async createBookCopy(
+    @Body() requestBody: BookCopyDTO
+  ): Promise<BookCopyDTO> {
+    let { available, bookId, state } = requestBody;
 
-    // Met à jour une copie de livre par ID
-    @Patch("{id}")
-    public async updateBookCopy(
-        @Path() id: number,
-        @Body() requestBody: BookCopyDTO
-    ): Promise<BookCopyDTO | null> {
-        const {bookId, available, state} = requestBody;
-        const bookCopy: BookCopy | null = await bookCopyService.updateBookCopy(id, bookId, available, state);
-        if (!bookCopy) {
-            let error: CustomError = new Error("BookCopy not found");
-            error.status = 404;
-            throw error;
-        }
-        return bookCopy;
+    if (bookId === undefined) {
+      let error: CustomError = new Error(
+        "Book ID is required to create a book copy"
+      );
+      error.status = 400;
+      throw error;
     }
+    return bookCopyService.createBookCopy(bookId, available, state);
+  }
 
-    // Supprime une copie de livre par ID
-    @Delete("{id}")
-    public async deleteBookCopy(@Path() id: number): Promise<void> {
-        await bookCopyService.deleteBookCopy(id);
-    }
+  @Patch("{id}")
+  @Security("jwt", ["bookCopy:update"])
+  public async updateBookCopy(
+    @Path() id: number,
+    @Body() requestBody: BookCopyDTO
+  ): Promise<BookCopyDTO> {
+    let { available, bookId, state } = requestBody;
+
+    return bookCopyService.updateBookCopy(id, bookId, available, state);
+  }
+
+  @Delete("{id}")
+  @Security("jwt", ["bookCopy:delete"])
+  public async deleteBookCopy(@Path() id: number): Promise<void> {
+    await bookCopyService.deleteBookCopy(id);
+  }
 }
